Use Flowbite for css

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,19 @@ title: Home
 layout: base.njk
 ---
 
-{% for post in collections.posts %}
-<p><a href="{{ post.url }}">{{ post.data.date | formatDate }} - {{ post.data.title }}</a></p>
-{% endfor %}
+<ol class="relative border-l border-gray-200 dark:border-gray-700">
+  {% for post in collections.posts | reverse %}
+  <li class="mb-2 ml-4">
+    <div
+      class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"
+    ></div>
+    <time
+      class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+      >{{ post.data.date | formatDate }}</time
+    >
+    <h4 class="text-lg font-semibold text-gray-900 dark:text-white">
+      <a href="{{ post.url }}">{{ post.data.title }}</a>
+    </h4>
+  </li>
+  {% endfor %}
+</ol>
